--- a/ajouter_article.html
+++ b/ajouter_article.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription aux Notifications</title>
+    <title>Ajouter un Article</title>
 </head>
 <body>
-    <h1>Inscription aux Notifications</h1>
-    <form action="enregistrer_notification.php" method="post">
+    <h1>Ajouter un Article</h1>
+    <form action="ajouter_article.php" method="post">
         <label for="nom">Nom de l'article:</label>
         <input type="text" id="nom" name="nom"><br><br>
 
@@ -32,13 +32,10 @@
             <option value="meilleure offre">Meilleure offre</option>
         </select><br><br>
 
-        <label for="prix_max">Prix maximum:</label>
-        <input type="number" id="prix_max" name="prix_max" step="0.01"><br><br>
+        <label for="prix">Prix:</label>
+        <input type="number" id="prix" name="prix" step="0.01"><br><br>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
-
-        <input type="submit" value="S'inscrire">
+        <input type="submit" value="Ajouter">
     </form>
 </body>
 </html>
